# sesac_mini_project

./: .gitignore  AGENTS.md  PROGRESS.md  ROADMAP.md  pyproject.toml  설계_및_수정안_v1.md  팀_작업가이드.md
.agents/: SKILL.md
backend/: auth.py  dependencies.py  hobby_agents.py  main.py  requirements.txt  schema.sql  seed_data.py  콘텍스트.md
backend/db/: connection.py
backend/repositories/: hobby_report_repository.py  mood_repository.py  saved_hobby_repository.py  user_repository.py
backend/routers/: hobby_router.py  home_router.py  library_router.py  mood_router.py  session_router.py
backend/schemas/: conversation.py  hobby.py  library.py  mood.py
backend/services/: conversation_service.py  hobby_service.py  home_service.py  library_service.py  mood_service.py
data/: HobbyDNA_9축_클릭선택_설문설계.md  PRD_취미로_v1.3.md  hobby_profile_dataset_v1.json  hobby_profile_dataset_v2.json  취미로 AI_Prompt_Spec.md  취미로_AI_Prompt_Spec_v1.3.md  할래말래_PRD_v1.2.md
frontend/: config.js  index.html
frontend/src/: code.html  code10.html  code11.html  code12.html  code13.html  code2.html  code3.html  code4.html  code5.html  code6.html  code7.html  code8.html  code9.html
