[tool.poetry]
name = "hobby-road-engine"
version = "0.1.1"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"

# LLM 호출 — PRD 8-1: 해석/선별/설명 생성은 OpenAI SDK 직접 호출
openai = "^1.35.0"

# 벡터 DB — RAG 검색(FR-403②, FR-405)에 직접 사용
chromadb = "^0.5.0"

# 정형 데이터 저장 (user_profile / hobby_profile / feedback_history / business_event)
supabase = "^2.5.0"

# 스키마 검증 / 환경변수 관리
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
pyjwt = "^2.13.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
# FR-1001: 구글시트 → CSV → Supabase/ChromaDB 적재 스크립트용 (서비스 런타임엔 불필요)
pandas = "^2.2.0"